<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginbkg"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#5C6BC0"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#5C6BC0"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/loginbutton"
                android:textColor="#263238"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                tools:ignore="VisualLintButtonSize" />

            <TextView
                android:id="@+id/registerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerText"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="13sp"
                android:textStyle="bold"
                android:padding="5dp"
                tools:ignore="TextContrastCheck" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>